--- a/tex/Foundations/Axioms.tex
+++ b/tex/Foundations/Axioms.tex
@@ -37,7 +37,7 @@
 		
 		\boxedaxiom{\textbf{The Axiom of Choice:} If $A$ is a non-empty set of non-empty sets then there exists a choice function for $A$.}
 		
-		\subsubsection{The Well-Ordering Theorem (a.k.a Zermelo's Theorem)}
+		\subsubsection{The Well-Ordering Theorem (a.k.a Zermelo's Theorem)}\label{sssection:well-ordering-theorem}
 		\boxeddefinition{A set is \textbf{well-ordered} by a strict total order if every non-empty subset has a minimal element under the ordering.}
 		\boxedaxiom{\textbf{Well-Ordering Theorem:} Every set can be well-ordered.}
 		
