--- a/tex/Algebra/Linear Transformations.tex
+++ b/tex/Algebra/Linear Transformations.tex
@@ -2747,9 +2747,9 @@
 				\[ T\v = T(\w_1 + \w_2) = \w_1. \]
 			}
 		\end{enumerate}
-		The projection of $V$ onto $W_1$ is described as \textit{parallel} to $W_2$ and is often denoted $P_{W_1}$. If we have,
+		The projection of $V$ onto $W_1$ --- often denoted $P_{W_1}$ ---  is described as \textit{parallel} to $W_2$ because the displacement vector, from the original vector to its projected image, is in $W_2$. If we have,
 		\[ W_1^\perp = W_2 \]
-		then the projection is described as an \textit{orthogonal projection}.
+		then the projection is further described as an \textit{orthogonal projection}.
 	}
 
 	\medskip
@@ -2954,6 +2954,10 @@
 		\[ \V{\hat\theta} = \inv{X} P_X Y = \inv{X} (X \inv{(X^T X)} X^T Y) = \inv{(X^T X)} X^T Y.   \qedhere \]
 	\end{proof}
 
+
+	\bigskip
+	\subsubsection{Reduced-Row Echelon Form as Projection}	
+	\TODO{the reduced row echelon form of a matrix $A$ is a projection onto the range of $A$}
 
 	\sep
 	\begin{exe}{% extra braces to scope \newcommand
