--- a/tex/Foundations/Axioms.tex
+++ b/tex/Foundations/Axioms.tex
@@ -35,11 +35,11 @@
 			\[ f: A \longmapsto \bigcup_{a \in A} \suchthat \forall a \in A, \; f(a) \in a. \]
 		}
 		
-		\boxedaxiom{\textbf{The Axiom of Choice:} If $A$ is a non-empty set of non-empty sets then there exists a choice function for $A$.}
+		\boxedaxiom{\textbf{(The Axiom of Choice)} If $A$ is a non-empty set of non-empty sets then there exists a choice function for $A$.}
 		
 		\subsubsection{The Well-Ordering Theorem (a.k.a Zermelo's Theorem)}\label{sssection:well-ordering-theorem}
 		\boxeddefinition{A set is \textbf{well-ordered} by a strict total order if every non-empty subset has a minimal element under the ordering.}
-		\boxedaxiom{\textbf{Well-Ordering Theorem:} Every set can be well-ordered.}
+		\boxedaxiom{\textbf{(Well-Ordering Theorem)} Every set can be well-ordered.}
 		
 		\note{The \textbf{Well-Ordering Principle} is usually taken to be the proposition that the positive integers are well-ordered (which may be axiomatic or proven by induction depending on the method of constructing the natural numbers) but is sometimes used synonymously with the Well-Ordering Theorem.}
 		
@@ -69,7 +69,7 @@
 		\end{exe}
 		
 		\bigskip
-		\boxedaxiom{\textbf{Zorn's Lemma:} Let $(P, \leq)$ be a non-empty partial order such that every totally ordered subset has an upper bound. Then $P$ has a maximal element.}
+		\boxedaxiom{\textbf{(Zorn's Lemma)} Let $(P, \leq)$ be a non-empty partial order such that every totally ordered subset has an upper bound. Then $P$ has a maximal element.}
 		
 		
 		\begin{tcolorbox}[breakable,enhanced jigsaw,colframe=white,colback=white,boxrule=0pt,arc=0pt,left=0pt,right=0pt,top=0pt,bottom=0pt]
