--- a/tex/Pure Mathematics.tex
+++ b/tex/Pure Mathematics.tex
@@ -7,13 +7,13 @@
 	\sloppy
 	\maketitle
 	
-	\chapter{Foundations}\biggerskip
+	\chapter{Foundations}\clearpage
 	\subfile{\foundationsDir/Axioms}
 	\newpage
 	\subfile{"\foundationsDir/Number Theory"}
 	\newpage
 	
-	\searchableChapter{Algebra}{abstract algebra, complex numbers}\biggerskip
+	\searchableChapter{Algebra}{abstract algebra, complex numbers}\clearpage
 	\subfile{"\algebraDir/Group Theory"}
 	\newpage
 	\subfile{"\algebraDir/Fields"}
@@ -34,7 +34,9 @@
 	\subfile{"\analysisDir/Analysis"}
 	
 	\newpage
-	\chapter{Calculus}\biggerskip
+	\chapter{Calculus}\clearpage
+	\subfile{"\calculusDir/Limits"}
+	\newpage
 	\subfile{"\calculusDir/Homogeneity"}
 	\newpage
 	\subfile{"\calculusDir/Taylor Series"}
