--- a/tex/reference/code examples.tex
+++ b/tex/reference/code examples.tex
@@ -131,5 +131,13 @@
 		even though
 		\[ \lim_{n \to \infty} \frac{1}{n} = 0. \]
 	\end{enumerate}
+
+	\subsection{Bracket Underneath}
+	\[\begin{aligned}
+		2a &= a + a, \nn
+		3a &= a + a + a, \nn
+		a^2 = aa &= \underbrace{a + a + \cdots + a}_{a \text{ times}}, \nn
+		a^3 = aaa &= \underbrace{a + a + \cdots + a}_{a \text{ times}} \, \underbrace{a + a + \cdots + a}_{a \text{ times}}.
+	\end{aligned}\]
 	
 \end{document}
